tests/inline-shell.err.out
error: inline-shell.err.li 3,10: variable `n` is not defined
    3 |     echo %n
      |          ^^
